@@ -2,6 +2,7 @@
 	bugfix: adjusted hardcoded values in VLAN trigger
 	bugfix: adjusted HW, SW and port types in SNMP data collector
 	bugfix: Cisco connector: tolerate switch ports in suspended state
+	new feature: UI option to control asset tag warning
 0.14.7 2007-12-05
 	bugfix: provide better SQL dumps for new installations
 	bugfix: gateways/switchvlans minor updates
